--- a/Fridge/res/layout/fragment_fridge.xml
+++ b/Fridge/res/layout/fragment_fridge.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fridge_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -9,8 +10,36 @@
     tools:context="com.hackmobile.fridge.FridgeActivity$PlaceholderFragment" >
 
     <TextView
+        android:id="@+id/main_heading"
+        style="@android:style/TextAppearance.Large"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#33b5e5"
+        android:padding="@dimen/title_padding"
+        android:text="@string/main_title"
+        android:textColor="#FFFFFF" />
+
+    <GridView
+        android:id="@+id/gridview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:columnWidth="80dp"
+        android:layout_below="@id/main_heading"
+        android:stretchMode="none"
+        android:horizontalSpacing="0dp"
+        android:numColumns="auto_fit"
+        android:layout_gravity="center"
+        android:verticalSpacing="0dp" />
+
+    <Button
+        android:id="@+id/main_add_button"
+        style="@android:style/TextAppearance.Large"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/gridview"
+        android:background="#0099cc"
+        android:padding="@dimen/title_padding"
+        android:text="@string/main_button_add"
+        android:textColor="#FFFFFF" />
 
 </RelativeLayout>
